# dsdc

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: __init__.py  app.py  config.py  forms.py  models.py  routes.py
app/static/css/: style.css
app/templates/: base.html  index.html  layout.html  quem_somos.html
app/templates/admin/: leads.html
app/translations/en/LC_MESSAGES/: messages.mo  messages.po
app/translations/pt/LC_MESSAGES/: messages.mo  messages.po
